--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,3 +20,11 @@ server.servlet.context-path=/
 spring.mustache.prefix=classpath:/templates/
 spring.mustache.suffix=.html
 
+
+springboot.vuejs.delimiters=<%,%>
+springboot.vuejs.axios=true
+springboot.vuejs.el=v-app
+springboot.vuejs.vuetify=true
+
+spring.ressources.static-locations=classpath:/static/
+
